@@ -1,22 +1,32 @@
 package org.example.ModuloServidor.EE.security;
 
+import io.vavr.control.Either;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.security.enterprise.credential.Credential;
 import jakarta.security.enterprise.credential.UsernamePasswordCredential;
 import jakarta.security.enterprise.identitystore.CredentialValidationResult;
 import jakarta.security.enterprise.identitystore.IdentityStore;
-import org.example.ModuloServidor.servicios.ServiciosUsuarios;
+import jakarta.security.enterprise.identitystore.Pbkdf2PasswordHash;
+import org.example.Common.modelo.User;
+import org.example.ModuloServidor.servicios.ServicioLogin;
 
 import java.util.Collections;
+import java.util.Set;
 
 import static jakarta.security.enterprise.identitystore.CredentialValidationResult.INVALID_RESULT;
 
 @ApplicationScoped
 public class InMemoryIdentityStore implements IdentityStore {
 
+    private final ServicioLogin servicioLogin;
+    private final Pbkdf2PasswordHash passwordHash;
+
     @Inject
-    private ServiciosUsuarios su;
+    public InMemoryIdentityStore(ServicioLogin servicioLogin, Pbkdf2PasswordHash passwordHash) {
+        this.servicioLogin = servicioLogin;
+        this.passwordHash = passwordHash;
+    }
 
     @Override
     public int priority() {
@@ -26,26 +36,35 @@ public class InMemoryIdentityStore implements IdentityStore {
     @Override
     public CredentialValidationResult validate(Credential credential) {
 
+        CredentialValidationResult credentialValidationResult = null;
+
         if (credential instanceof UsernamePasswordCredential) {
-            UsernamePasswordCredential user = UsernamePasswordCredential
-                    .class.cast(credential);
+            UsernamePasswordCredential userCredential = (UsernamePasswordCredential) credential;
 
-            if (su.login(user.getCaller(), user.getPasswordAsString())) {
-                var usuario = su.getUsuario(user.getCaller());
-                if (usuario.isRight()) {
 
-                    switch (usuario.get().getTipoUsuario()) {
-                        case 1:
-                            return new CredentialValidationResult(user.getCaller(), Collections.singleton(ConstantesSecurity.ADMIN));
-                        case 2:
-                            return new CredentialValidationResult(user.getCaller(), Collections.singleton(ConstantesSecurity.USER));
-                        default:
-                            return INVALID_RESULT;
+            Either<String, User> userDatabase = servicioLogin.geUser(userCredential.getCaller());
+
+            if (userDatabase.isRight()) {
+                if (passwordHash.verify(userCredential.getPasswordAsString().toCharArray(), userDatabase.get().getHashedPassword())) {
+                    if (userDatabase.get().getTipoUsuario() == 1) {
+                        credentialValidationResult = new CredentialValidationResult(userCredential.getCaller(), Set.of(ConstantesSecurity.ADMIN, ConstantesSecurity.USER));
+                    } else {
+                        credentialValidationResult = new CredentialValidationResult(userCredential.getCaller(), Collections.singleton(ConstantesSecurity.USER));
                     }
-                }
-            }
-        }
-        return INVALID_RESULT;
-    }
 
+                } else {
+//                Tratar contra incorrecta
+                    credentialValidationResult = INVALID_RESULT;
+
+                }
+            } else {
+//            Tratar Either para cuando no exista e user o de error la querie
+                credentialValidationResult = INVALID_RESULT;
+
+            }
+
+
+        }
+        return credentialValidationResult;
+    }
 }
